# my_aed

./: .gitignore  1.py  DRF_1_AutoML_1_20240108_145922  Dockerfile  GBM_1_AutoML_3_20240113_162452  GBM_2_AutoML_1_20240111_184347  GBM_3_AutoML_1_20240108_152345  GBM_grid_1_AutoML_1_20240111_233858_model_4  GBM_grid_1_AutoML_1_20240112_100732_model_4  README.md  StackedEnsemble_BestOfFamily_1_AutoML_1_20240108_174135  StackedEnsemble_BestOfFamily_4_AutoML_1_20240109_93917  XGBoost_grid_1_AutoML_1_20240111_185033_model_60  aed_poland.csv  aed_poland.geojson  amenities.json  ammenities.ipynb  analysis.ipynb  aquire_data.py  cincinnati_osm.csv  create_main_df.py  daaata.py  deploy.sh  es.py  galerie.json  get_building_data.py  hexagon_amenities.csv  hexagon_amenities.json  high_acuty_data_seattle.xlsx  kaplica.ipynb  leaderboard.csv  line_data.json  log.txt  lublin.csv  lublin.html  make_predictions.py  model.py  model_path.txt  model_stats.txt  montgomery_osm.csv  (+18 more)
cincinnati/: cintinati_filter.py
county/: county_filtered.csv  date_loc_county_cardi.csv  filter.py  marin_features.csv
h2o_model_mojo/: StackedEnsemble_AllModels_4_AutoML_1_20240106_212859  StackedEnsemble_AllModels_4_AutoML_3_20240106_213514  StackedEnsemble_BestOfFamily_4_AutoML_2_20240106_213121  StackedEnsemble_BestOfFamily_5_AutoML_8_20240107_181031
maps/: lublin.html  warsaw1.html  warsaw2.html
models/: GBM_grid_1_AutoML_1_20240113_214725_model_1  GBM_grid_1_AutoML_1_20240211_222708_model_16  (+1 more)
neighbourer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test.csv
(+7 files in other folders)
